--- a/public/css/style.css
+++ b/public/css/style.css
@@ -541,7 +541,7 @@ a:hover {
 .services_section {
   width: 100%;
   float: left;
-  background-image: url(../images/services-bg.png);
+  background-image: url(https://www.nativeindonesia.com/foto/alun-alun-karawang/alun-alun-karawang.jpg);
   height: auto;
   padding-bottom: 100px;
   background-attachment: fixed;
